--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "canvas": "^2.11.2",
     "color-namer": "^1.4.0",
+    "commander": "^12.0.0",
     "csv-parser": "^3.0.0"
   }
 }
